--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test value="shoppingList">SmartWatch</li>
+		<li data-ns-test value="shoppingList">Sportsbike</li>
+		<li data-ns-test value="shoppingList">Working setup</li>
+	</ol>
+	<ul>
+		<li data-ns-test value="holidaysList">Guwahati</li>
+		<li data-ns-test value="holidaysList">Tamil Nadu</li>
+		<li data-ns-test value="holidayList">Kasmir</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
