--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol>
-		<li data-ns-test value="shoppingList">SmartWatch</li>
-		<li data-ns-test value="shoppingList">Sportsbike</li>
+		<li data-ns-test value="shoppingList">Watch</li>
+		<li data-ns-test value="shoppingList">bike</li>
 		<li data-ns-test value="shoppingList">Working setup</li>
 	</ol>
 	<ul>
