--- a/main.html
+++ b/main.html
@@ -9,14 +9,14 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol>
-		<li data-ns-test value="shoppingList">Watch</li>
-		<li data-ns-test value="shoppingList">bike</li>
-		<li data-ns-test value="shoppingList">Working setup</li>
+		<li data-ns-test ="shoppingList">Watch</li>
+		<li data-ns-test ="shoppingList">bike</li>
+		<li data-ns-test ="shoppingList">Working setup</li>
 	</ol>
 	<ul>
-		<li data-ns-test value="holidaysList">Guwahati</li>
-		<li data-ns-test value="holidaysList">Tamil Nadu</li>
-		<li data-ns-test value="holidayList">Kasmir</li>
+		<li data-ns-test ="holidaysList">Guwahati</li>
+		<li data-ns-test ="holidaysList">Tamil Nadu</li>
+		<li data-ns-test ="holidayList">Kasmir</li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
