--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
 		<li data-ns-test ="shoppingList">Working setup</li>
 	</ol>
 	<ul>
-		<li data-ns-test ="holidaysList">Guwahati</li>
-		<li data-ns-test ="holidaysList">Tamil Nadu</li>
+		<li data-ns-test ="holidayList">Guwahati</li>
+		<li data-ns-test ="holidayList">Tamil Nadu</li>
 		<li data-ns-test ="holidayList">Kasmir</li>
 	</ul>
     <script type="text/javascript" src="./script.js">
